fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -115,4 +115,5 @@ header {
   font-weight: 500;
   line-height: 1.5;
   margin-bottom: 20px;
+  text-align: justify;
 }
